# tau

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  cron_jobs.json  install.sh  pyproject.toml  remind_phone_call.py  supervisord.conf  tauctl
.agent/sessions/: sess_1770759890395.json  sess_1770902441687.json  sess_1770926138992.json  sess_1770926160833.json  sess_1770926825287.json  sess_1770927011238.json  sess_1770927020390.json  sess_1770927042016.json  sess_1770927053656.json
.cursor/rules/: context-system.mdc  facts-command.mdc
agent/: .gitignore  AGENTS.md  LICENSE  README.md  agent.py  pyproject.toml  requirements.txt
agent/astuces/: 01-prompt-caching.md  02-self-verification.md  03-context-management.md  04-system-prompt-design.md  05-tool-output-handling.md  06-autonomous-mode.md  07-git-hygiene.md  08-cost-optimization.md  09-local-testing.md  README.md
agent/benchmarks/: default_tasks.json
agent/docs/: README.md  architecture.md  best-practices.md  chutes-integration.md  configuration.md  context-management.md  installation.md  overview.md  quickstart.md  tools.md  usage.md
agent/rules/: 01-what-is-generalist-agent.md  02-architecture-patterns.md  03-allowed-vs-forbidden.md  04-anti-patterns.md  05-best-practices.md  06-llm-usage-guide.md  07-tool-design.md  08-error-handling.md  09-testing-your-agent.md  10-checklist.md  README.md
agent/scripts/: benchmark_suite.py  run_benchmark.py  self_improve.py
agent/src/: __init__.py  main.py
agent/src/api/: __init__.py  retry.py
agent/src/config/: __init__.py  defaults.py  loader.py  models.py
agent/src/core/: __init__.py  agent.py  budget.py  compaction.py  executor.py  history_manager.py  loop.py  session.py  turn_runtime.py
agent/src/exec/: __init__.py  runner.py
agent/src/images/: __init__.py  loader.py
agent/src/llm/: __init__.py  client.py  router.py
agent/src/output/: __init__.py  events.py  jsonl.py  processor.py  streaming.py
agent/src/prompts/: __init__.py  system.py  templates.py
agent/src/tools/: __init__.py  apply_patch.py  base.py  exec_policy.py  grep_files.py  guards.py  hashline.py  list_dir.py  orchestrator.py  policy.py  read_file.py  registry.py  router.py  search_files.py  shell.py  specs.py  subagent.py  view_image.py  web_search.py  write_file.py
agent/src/utils/: __init__.py  files.py  tokens.py  truncate.py
app/: index.html  package-lock.json  package.json
app/src/: App.tsx  index.css
codex/: README.md  my_rollout.json
codex/docs/: exec.md
context/: CHAT_SUMMARY.md  CONTEXT.md  CONTEXT_MANAGEMENT_IMPROVEMENTS.md  ENTRY.md  IDENTITY.md  MEMORY-SYSTEM.md
context/memory/: CORE_MEMORY.md  MID_TERM.md
context/skills/: basilica.md  eve-skills.md  lium-skills.md  targon.md  (+1 more)
skills/: agent.md
tau/: __init__.py  __main__.py  agent.py  codex.py  llm.py  processes.py  send_message.py  send_voice.py  spinners.py  telegram.py
tests/: conftest.py  test_e2e_bot.py  test_e2e_loops.py
(+27 files in other folders)
