[project]
name = "tau"
version = "0.1.0"
description = "An agent that can do stuff and upgrade its own code in real time."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pytelegrambotapi", "openai", "python-dotenv", "supervisor"]

[project.scripts]
tau = "tau:main"

[tool.setuptools]
packages = ["tau"]
