[project]
name = "tau"
version = "0.1.0"
description = "An agent that can do stuff and upgrade its own code in real time."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pytelegrambotapi", "openai", "python-dotenv", "supervisor"]

[project.optional-dependencies]
# Eve (Eden.art) creative tools integration - install with: uv pip install -e ".[eve]"
eve = ["eve @ git+https://github.com/edenartlab/eve.git"]

[project.scripts]
tau = "tau:main"

[tool.setuptools]
packages = ["tau"]
